# nova-poshta-client

./: Cargo.toml  README.md  criterion.toml
benches/: bench.rs
benchmark_results/data/main/Tracking document/tracking_doc_deserializer/: benchmark.cbor  measurement_231113135437.cbor  measurement_231113140119.cbor
benchmark_results/reports/: index.html
benchmark_results/reports/Tracking document/: index.html
benchmark_results/reports/Tracking document/tracking_doc_deserializer/: history.html  index.html
src/: lib.rs  np_client.rs  tests.rs
src/np_client/: address.rs  cities.rs  counterparty.rs  date_format.rs  deserializer.rs  en.rs  helper_structs.rs  internet_document.rs  res_template.rs  settlements.rs  tracking.rs  warehouses.rs
src/np_client/address/: cities.rs  settlements.rs  warehouses.rs
src/np_client/counterparty/: addresses.rs  contact_persons.rs  counterparties.rs  create.rs
src/tests/: cities.rs  create_counterparty.rs  create_internet_document.rs  settlement_search.rs  tracking.rs  warehouses.rs
src/tests/resources/: cities_response.json  counterparty_addresses_response.json  counterparty_contact_persons_response.json  create_counterparty_response.json  create_internet_document_response.json  settlement_search_response.json  tracking_response.json  tracking_response_no_phone.json  warehouses_response.json
