[package]
name = "nova_poshta"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_with = {version = "3.3.0", features = ["chrono_0_4"]}
uuid = { version = "1.4.1", features = ["serde"] }
tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
serde_json = "1.0.107"
chrono = "0.4.31"
url = "2.4.1"
regex = "1.9.1"
wiremock = "0.5.19"
thiserror = "1.0.49"